[package]
authors = ["Chris Yunker <chrisyunker@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "led-compass"
version = "0.1.0"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = [
    "stm32f303vc",
    "unstable-pac",
    "memory-x",
    "time-driver-tim2",
    "exti",
]}
embassy-sync = "0.6.2"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = "0.4.0"
embassy-futures = "0.1.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3" }
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"
lsm303dlhc = "0.2.0"



# this lets you use `cargo fix`!
[[bin]]
name = "led-compass"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
