[package]
authors = ["Chris Yunker <cyunker@riotgames.com>"]
edition = "2018"
readme = "README.md"
name = "led-rotate"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
critical-section = "1.2.0"
heapless = { version = "0.8.0", features = ["portable-atomic"] }
panic-halt = "1.0.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"
switch-hal = "0.4.0"

[dependencies.futures]
version = "0.3.30"
default-features = false
features = ["async-await"]

[dependencies.stm32f3]
features = ["stm32f303"]
version = "0.15.1"

[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt"]
version = "0.10"

# this lets you use `cargo fix`!
[[bin]]
name = "led-rotate"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
